fixed socket overlap alignment

--- a/data/all.css
+++ b/data/all.css
@@ -305,3 +305,14 @@ position:absolute;
   display: block;
   z-index: 6;
   }
+  
+.flex-box {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  
+  justify-content: center;
+  align-items: center;
+  
+}
